--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,5 +58,8 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "cSpell.words": [
     "MAXN"
-  ]
+  ],
+  "files.associations": {
+    "chrono": "cpp"
+  }
 }
